--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-dependency-db",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Query npm dependents of a certain version or version range of a given package",
   "bin": "cli.js",
   "scripts": {
@@ -48,5 +48,9 @@
   "bugs": {
     "url": "https://github.com/watson/npm-dependency-db/issues"
   },
-  "homepage": "https://github.com/watson/npm-dependency-db#readme"
+  "homepage": "https://github.com/watson/npm-dependency-db#readme",
+  "coordinates": [
+    35.6666393,
+    139.69234
+  ]
 }
