--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "after-all": "^2.0.2",
     "ansi-diff-stream": "^1.1.1",
     "debug": "^2.2.0",
+    "dependency-db": "^1.0.0",
     "hypercore": "^4.14.0",
     "hyperdrive-archive-swarm": "^5.0.2",
     "level": "^1.5.0",
