--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mkdirp": "^0.5.1",
     "normalize-registry-metadata": "^1.1.2",
     "progress-string": "^1.1.0",
-    "semver": "^5.3.0"
+    "semver": "^5.3.0",
+    "through2": "^2.0.1"
   },
   "devDependencies": {
     "standard": "^8.5.0"
