--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "mkdirp": "^0.5.1",
     "normalize-registry-metadata": "^1.1.2",
     "parallel-transform": "^1.1.0",
+    "prettier-bytes": "^1.0.3",
     "progress-string": "^1.2.0",
     "pump": "^1.0.1",
     "semver": "^5.3.0",
+    "speedometer": "^1.0.0",
     "through2": "^2.0.1"
   },
   "devDependencies": {
