--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dependency-db": "^1.0.0",
     "hypercore": "^4.14.0",
     "hyperdrive-archive-swarm": "^5.0.2",
-    "level": "^1.5.0",
+    "level-party": "^3.0.4",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "normalize-registry-metadata": "^1.1.2",
