--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pump": "^1.0.1",
     "semver": "^5.3.0",
     "speedometer": "^1.0.0",
+    "subleveldown": "^2.1.0",
     "through2": "^2.0.1"
   },
   "devDependencies": {
