--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "ansi-diff-stream": "^1.1.1",
     "debug": "^2.3.0",
     "dependency-db": "^5.0.2",
-    "hypercore": "^5.2.0",
-    "hyperdrive-archive-swarm": "^5.0.2",
+    "hypercore": "^5.3.3",
+    "hyperdiscovery": "^1.2.0",
     "level-party": "^3.0.4",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
